# mh3se

./: .gitignore  Cargo.toml  README.md  build.sh  example.csv  items.txt  main.py  types.txt
data/: gun_parts.txt  items.txt  skills.txt  types.txt  weapons.txt
src/: common.rs  csv.rs  csv_read.rs  csv_write.rs  defs.rs  main-ui.rs  main.rs  save.rs  save_read.rs  save_write.rs
web/: coloring.css  data.json  database.json  index.html  index.js  save.json  structure.css
web/img/: CasA_nircam_2048.avif
